--- a/TangentConstruction/TangentConstruction New Site/NewConstruction.html
+++ b/TangentConstruction/TangentConstruction New Site/NewConstruction.html
@@ -36,7 +36,6 @@
               <li><a href="StuccoRemediation.html">Re-Stucco</a></li>
             </ul>
           </div>
-          <!-- <a href="StuccoRemediation.html" target="_self"> Stucco Remediation </a> -->
         </div>
         <div class="col-sm-2">
           <a href="NewConstruction.html" style="text-decoration: underline" target="_self"> New Construction </a>
@@ -62,7 +61,7 @@
     <hr>
 
     <div id="stucco" class='col-lg-12'>
-      <h4> We handle stucco.. </h4>
+      <h4 style="text-align: center"> We handle stucco.. </h4>
       <p class='col-md-8'>
         Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
         topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
@@ -74,7 +73,7 @@
 
     <div id="foam" class=col-lg-12>
       <hr>
-      <h4> We handle architectural foam.. </h4>
+      <h4 style="text-align: center"> We handle architectural foam.. </h4>
       <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/Architectual stuff/ArcheFoam.jpg" width="250" height="200" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
       <p class='col-md-8'>
         Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
@@ -86,7 +85,7 @@
 
     <div id="stone" class='col-lg-12'>
       <hr>
-      <h4> We handle architectural stone.. </h4>
+      <h4 style="text-align: center"> We handle architectural stone.. </h4>
       <p class='col-md-8'>
         Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
         topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
