--- a/TangentConstruction/TangentConstruction New Site/StuccoRemediationHome.html
+++ b/TangentConstruction/TangentConstruction New Site/StuccoRemediationHome.html
@@ -21,12 +21,12 @@
       <!-- spacing -->
       <hr>
       <div class="navbar">
-        <div class="col-sm-1"> </div>
+        <div class="col-md-1"> </div>
 
-        <div class="col-sm-2">
+        <div class="col-md-2">
           <a href="TangentHome.html" target="_self"> Tangent Home </a>
         </div>
-        <div class="col-sm-2">
+        <div class="col-md-2">
           <div class="dropdown">
             <button class="btn" style="text-decoration: underline" type="button" data-toggle="dropdown">Stucco Remediation
               <span class="caret"></span></button>
@@ -36,35 +36,147 @@
               <li><a href="StuccoRemediation.html">Re-Stucco</a></li>
             </ul>
           </div>
-          <!-- <a href="StuccoRemediation.html" target="_self"> Stucco Remediation </a> -->
         </div>
-        <div class="col-sm-2">
+        <div class="col-md-2">
           <a href="NewConstruction.html" target="_self"> New Construction </a>
         </div>
-        <div class="col-sm-2">
+        <div class="col-md-2">
           <a href="ChineseDrywall.html" target="_self"> Chinese Drywall </a>
         </div>
-        <div class="col-sm-2">
+        <div class="col-md-2">
           <a href="ContactUs.html" target="_self"> Contact Us </a>
         </div>
-        <div class="col-sm-1"> </div>
+        <div class="col-md-1"> </div>
       </div>
     </div>
 
   </header>
 
   <body>
-    <br> <br> <br> <br> <br> <br>
-    <hr>
-    <h1 style="text-align: center"> How do I know if I need stucco remediation </h1>
-    <hr>
 
-    Stucco remediation is when we come out to fix damaged stucco. We do this in one of two ways. First, if it is lightly damaged, we can do a seal and paint.
-    Second option is for more damaged stucco, we come out and
+    <h2 style="text-align: center"> What is stucco remediation? </h2>
+    <hr>
+    <p>
+      Stucco remediation is when we come out to fix damaged stucco. If your stucco is broken, buckling, or cracked, water can get in.
 
-    <h3>
-      A cheaper option for less damaged stucco is to seal and repaint it.
-    </h3>
+      Stucco remediation is when we come out to fix damaged stucco. We do this in one of two ways. First, if it is lightly damaged, we can do a seal and paint.
+      Second option is for more damaged stucco, we come out and
+    </p>
+
+    <br>
+
+    <div class="col-lg-12">
+      <!-- <div> -->
+      <h3 class="col-md-6">
+        How do you know if you need it?
+      </h3>
+
+      <!-- </div> -->
+      <!-- <div class="image col-md-6"> <img src="../EmailedPictures/Pictures for Kyle/House 1/Stucco.jpg" width="250" height="200" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div> -->
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="width: 450px; text-align:center; display: inline; align-content: center; float: right">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="../EmailedPictures/ChuckPics/StuccoBuckleing.jpg" width="250" height="300" alt="First slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="../EmailedPictures/ChuckPics/StuccoBuckleing (5).jpg" width="250" height="300" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="../EmailedPictures/ChuckPics/StuccoBuckleing (2).jpg" width="250" height="300" alt=" Third slide">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+      <p class='col-md-6'>
+        Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
+        topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
+        Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
+      </p>
+
+    </div>
+
+
+    <div class="col-lg-12">
+      <h3>
+        What is the problem with broken stucco?
+      </h3>
+      <p class='col-md-8'>
+        Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
+        topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
+        Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
+      </p>
+      <div class="image col-md-4"> <img src="../EmailedPictures/ChuckPics/GarageDmg.jpg" width="250" height="200" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
+    </div>
+
+    <div class="col-lg-12">
+      <h3>
+        Can you test to assess damage?
+      </h3>
+      <p class='col-md-8'>
+        Yes we can! It is called 'core sampleing'. We can send someone out to cut out (core) a peice of the stucco, which lets
+        us see the framing behind the stucco to get an idea of the damage. We then patch and paint the holes.
+        Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
+        topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
+        Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
+      </p>
+      <div class="image col-md-4"> <img src="../EmailedPictures/ChuckPics/CoreSample.jpg" width="250" height="200" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
+    </div>
+
+
+    <div class="col-lg-12">
+      <h3>
+        How can we fix it?
+      </h3>
+      <p class='col-md-8'>
+        Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
+        topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
+        Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
+      </p>
+      <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/House 1/Stucco.jpg" width="250" height="200" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div>
+    </div>
+
+
+    <div class="col-md-6">
+      <h4 style="text-align:center">
+        Seal and repaint
+      </h4>
+      <!-- <p class='col-md-8'> -->
+      Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
+      topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
+      Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
+      <br>
+      Click <a style="text-decoration:underline" href="SealAndPaint.html"> here </a> to go to the Seal and Repaint page.
+      <!-- </p> -->
+      <!-- <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/House 1/Stucco.jpg" width="250" height="200" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div> -->
+    </div>
+
+
+    <div class="col-md-6">
+      <h4 style="text-align:center">
+        Tear off and re-stucco
+      </h4>
+      <!-- <p class='col-md-8'> -->
+      Coxswain chandler Admiral of the Black spike matey scallywag galleon jolly boat squiffy hearties. Cat o'nine tails clap of thunder Spanish Main bilge water coxswain matey doubloon bucko aye hulk. Plunder keel fire in the hole pinnace tack
+      topsail wench hearties lugsail bilge rat. Handsomely cackle fruit fore topgallant wherry boatswain lad overhaul bilge rat pressgang. Sloop Jack Ketch mizzen squiffy loaded to the gunwalls coffer Corsair hands black spot take a caulk. Chain
+      Shot gaff Spanish Main spanker holystone rutters black jack keelhaul spike Jack Ketch.
+      <br>
+      Click <a style="text-decoration:underline" href="StuccoRemediation.html"> here </a> to go to the re-stucco page.
+      <!-- </p> -->
+      <!-- <div class="image col-md-4"> <img src="../EmailedPictures/Pictures for Kyle/House 1/Stucco.jpg" width="250" height="200" alt="Photo of my wife and I in aprons." style=height: px300 width: px300;> </div> -->
+    </div>
+
 
 
 
