--- a/TangentConstruction/TangentConstruction New Site/TangentHome.html
+++ b/TangentConstruction/TangentConstruction New Site/TangentHome.html
@@ -36,7 +36,6 @@
               <li><a href="StuccoRemediation.html">Re-Stucco</a></li>
             </ul>
           </div>
-          <!-- <a href="StuccoRemediation.html" target="_self"> Stucco Remediation </a> -->
         </div>
         <div class="col-sm-2">
           <a href="NewConstruction.html" target="_self"> New Construction </a>
@@ -54,11 +53,8 @@
   </header>
 
   <body>
-    <!-- Spacing  -->
-    <br> <br> <br> <br> <br> <br>
-    <hr>
 
-    <h5 style="text-align: center"> Welcome to Tangent Construction Services </h5> <br>
+    <h2 style="text-align: center"> Welcome to Tangent Construction Services </h2> <br>
     <p>
       We are a family owned construction company that focuses on Stucco Remediation, New Construction, and Chinese Drywall.
       We have been in buisness for more than a decade.
@@ -74,13 +70,12 @@
       ship belay parley mizzenmast fire in the hole deadlights.
     </p>
     <br>
-    <br>
 
     <h2 style="text-align:center">
       What are others saying about Tangent Construction Services?
     </h2>
     <!-- text-align:center; align-content: center; -->
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="height:300px">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -111,12 +106,29 @@
           </div>
         </div>
         <div class="carousel-item">
-          <!-- <img class="d-block w-100" src="..." alt="Second slide"> -->
-          <p> but don't take our word for it </p>
+          <div class="col-sm-10 col-sm-offset-1">
+            <p>
+              <br>
+              "I have used the team at Tangent Construction Services on various projects - both high production townhomes and single-family communities.
+              Everyone I work with is extremely professional. They exceeded my expectations and I wouldn't hesitate to use them again and recommend them.
+              The complete turnkey solution! <br> <br>
+
+              When it comes to warranty service, Tangent always goes the extra mile to complete work orders in a timely manner.
+              What defines a company is what they do when something goes wrong, and this team ALWAYS resolves problems without guidance."
+              <br> <br>
+
+              Tony Valle <br>
+              COO of GHO Homes LLC
+            </p>
+          </div>
         </div>
         <div class="carousel-item">
-          <!-- <img class="d-block w-100" src="..." alt="Third slide"> -->
-          <p> take their word for it. </p>
+          <div class="col-sm-10 col-sm-offset-1">
+            <p>
+              <br>
+              take their word for it.
+            </p>
+          </div>
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
